updated text to start on left

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -200,7 +200,7 @@ middleware: ["AWS", "Docker", "Kafka", "Git", "Grafana", "Splunk", "Kuzzle"]
             
             <!-- Description -->
             <div class="relative">
-              <p class="text-white/90 leading-relaxed text-sm lg:text-base">
+              <p class="text-white/90 leading-relaxed text-sm lg:text-base text-start">
                 {exp.description}
               </p>
               
